continue to style booking form. Issues with possitioning in the middle and with overflow on the nav links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,11 +168,51 @@ p {
 /****************************** book.html styling ***************************************/
 
 #book-container {
-    height: 800px;
-    width: 100%;
+    height: 600px;
+    width: 80%;
     overflow: hidden;
     background-color: chartreuse;
+    text-align:center;
+    margin-bottom: 20px;
+
 }
+
+form{
+    display:grid;
+    grid-row-gap: 20px;
+}
+
+form p {
+    font-weight: 600;
+}
+
+.form-field{
+    display: flex;
+    justify-content: space-between;
+}
+
+input,select{
+    pad:10px 15px;
+
+}
+
+.btn{
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border:none;
+    border-radius: 100px;
+    box-shadow: 7px 10px 12px rgba(0, 0, 0, -1);
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.btn:hover{
+    transform: scale(1.03);
+    box-shadow:7px 12px 15px rgba(0, 0, 0, -3); ;
+}
+
+
 
 /******************************footer styling ***************************************/
 .footer-container{
